add desktop interface